# pythogen

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  exp.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml  lint.yml  main.yml  pypi.yml  test.yml
development/: index.html
docs/: README.md  _config.yml  client_as_pkg.md  development.md  discriminator.md  headers.md  index.md  logs.md  main.md  metrics.md  sync_async.md
docs/__pages/overview/: installation.md
docs/_pages/: overview.md
docs/features/: discriminator.md  logs.md  package.md  property_safety_name.md  sync_async_clients.md
examples/petstore/: client_async.py  client_sync.py  openapi.yaml
features/discriminator/: index.html
features/logs/: index.html
features/package/: index.html
features/property_safety_name/: index.html
features/sync_async_clients/: index.html
pythogen/: console.py  entrypoint.py  exceptions.py  main.py  models.py  packager.py  renderer.py  settings.py
pythogen/parsers/: constants.py  document.py  inline_schemas_aggregator.py  operations.py  parameters.py  paths.py  references.py  request_body.py  response.py  schemas.py
pythogen/templates/: httpx.j2  pyproject-toml.j2
pythogen/templates/client/: httpx-method.j2  httpx-request-metrics.j2  httpx-request.j2
pythogen/templates/http_client/: main.j2  method.j2  operation_params_schemas.j2  path_params_schemas.j2  query_params_schemas.j2  request-metrics.j2
pythogen/templates/package/: init-py.j2
search/: search_index.json
tests/: Dockerfile  main.py  requirements.txt  test_models.py
tests/clients/: async_client.py  async_client_with_headers.py  async_client_with_metrics.py  sendsay.py  sync_client.py  sync_client_with_metrics.py
tests/clients/my_client/: pyproject.toml
tests/clients/my_client/my_client/: __init__.py  my_client.py
tests/docs/: openapi-with-too-much-allof.yaml  openapi.yaml  openapi_sendsay.yaml
tests/pythogen/: test_clients.py  test_entrypoint.py  test_init_client.py  test_models.py
tests/server/: Dockerfile  server.py
