[tool.poetry]
name = "pythogen"
version = "0.1.23"
description = "Generator of python HTTP-clients from OpenApi specification."
homepage = "https://github.com/artsmolin/pythogen"
repository = "https://github.com/artsmolin/pythogen"
authors = [
    "Artur Smolin <artursmolin@outlook.com>",
    "Vladimir Vyazovetskov <erhosen@gmail.com>",
    "Evgeny Solomatin <solgenya@gmail.com>",
    "Aleksandr Kirpichnikov <razerboy@yandex.ru>"
]
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
]
keywords = ["openapi", "openapi-generator", "swagger", "http-client", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
pyyaml = "^6.0"
jinja2 = "^3.1.1"
rich = "^12.2.0"
inflection = "^0.5.1"
black = "^23.3.0"

[tool.poetry.scripts]
pythogen = 'pythogen.entrypoint:run'

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
importlib-metadata = "^4.11.4"
pre-commit = "^2.19.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
pydantic = "^1.10.9"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
