[tool.poetry]
name = "pythogen"
version = "0.2.40"
description = "Generator of python HTTP-clients from OpenApi specification."
homepage = "https://github.com/artsmolin/pythogen"
repository = "https://github.com/artsmolin/pythogen"
authors = [
    "Artur Smolin <artursmolin@outlook.com>",
    "Vladimir Vyazovetskov <erhosen@gmail.com>",
    "Evgeny Solomatin <solgenya@gmail.com>",
    "Aleksandr Kirpichnikov <razerboy@yandex.ru>"
]
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
]
keywords = ["openapi", "openapi-generator", "swagger", "http-client", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.1"
inflection = "^0.5.1"
black = "^23.3.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
pydantic = "^2.0.2"
pytest-cov = "^4.1.0"
openapi-spec-validator = "^0.7.1"

[tool.poetry.scripts]
pythogen = 'pythogen.main:run'

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
importlib-metadata = "^4.11.4"
pre-commit = "^2.19.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
pydantic = "^2.0.0"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.3"
mkdocs-material = "^9.5.2"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
lines-after-imports = 2
force-single-line = true
