[tool.poetry]
name = "my_client"
version = "0.0.1"
description = "my_client"
authors = ["Rick, Morty"]

[tool.poetry.dependencies]
httpx = "^0.18.2"
pydantic = "^1.8.2"
colorama = "^0.4.4"
jaeger-client = "^4.8.0"
prometheus-client = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"